--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,8 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.15.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.26.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.7.26.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-core-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/simplelatlng-1.3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/simplelatlng-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
